--- a/confs/proj_2.yml
+++ b/confs/proj_2.yml
@@ -14,9 +14,9 @@ data_loader:
             - anne watson
             - watson
         crime:
-          - crime_weapon:
+          crime_weapon:
             - revolver
-          - crime_objects:
+          crime_objects:
             - tmp
       The_Man_in_Lower_Ten:
         url: https://www.gutenberg.org/files/1869/1869-0.txt
@@ -31,9 +31,9 @@ data_loader:
             - curtis
             - alice
         crime:
-          - crime_weapon:
+          crime_weapon:
             - dagger
-          - crime_objects:
+          crime_objects:
             - tmp
       The_After_House:
         url: https://gutenberg.org/files/2358/2358-0.txt
@@ -46,9 +46,9 @@ data_loader:
             - charlie
             - jones
         crime:
-          - crime_weapon:
+          crime_weapon:
             - axe
-          - crime_objects:
+          crime_objects:
             - tmp
       The_Window_at_the_White_Cat:
         url: https://www.gutenberg.org/cache/epub/34020/pg34020.txt
@@ -61,9 +61,9 @@ data_loader:
             - ellen butler
             - butler
         crime:
-          - crime_weapon:
+          crime_weapon:
             - revolver
-          - crime_objects:
+          crime_objects:
             - tmp
       The_Bat:
         url: https://www.gutenberg.org/cache/epub/2019/pg2019.txt
@@ -74,10 +74,10 @@ data_loader:
           - The Bat:
             - bat
         crime:
-          - crime_weapon:
+          crime_weapon:
             - gun
             - revolver
-          - crime_objects:
+          crime_objects:
             - tmp
 
 
